<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MartBell</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_item_list">Stores around you</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="login_button">Login</string>
    <string name="home_button">Home</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="welcome">Welcome to MartBell</string>
    <string name="location_switch">Location</string>
    <string name="store_name">Name of the Store</string>
    <string name="phone_no_store">Phone No of the store</string>
    <string name="postal_address_store">Full Address of the store</string>

</resources>
