<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/accent_material_light"
    tools:context=".ItemDetailActivity">


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:id="@+id/textView"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="4dip"
    style="@style/AppTheme"
    android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:layout_marginTop="4dip"
        android:layout_marginRight="10dip"
        android:layout_gravity="right|top"
        android:background="#fff4fff5"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_button"
        android:layout_marginTop="4dip"
        android:layout_marginLeft="8dip"
        android:id="@+id/home_button"
        android:layout_gravity="left|top"
        android:background="#fff4fff5"
        android:maxHeight="@android:dimen/app_icon_size" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/item_list"
    android:name="com.tinker.mappie.ItemListFragment" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_marginLeft="32dp"
    android:layout_marginBottom="80dp"
    android:layout_marginTop="@dimen/abc_action_bar_stacked_tab_max_width"
    android:layout_marginRight="20dp" tools:context="com.tinker.mappie.ItemListActivity"
    tools:layout="@android:layout/list_content"
        android:layout_gravity="right|center_vertical" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchView2"
        android:layout_gravity="center"
        android:layout_marginBottom="130dp"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="#fff4fff5" />

</FrameLayout>